--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:gravity="center_vertical"
-    android:padding="16dp"
+    android:padding="0dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     >
     <ImageView
@@ -18,11 +17,11 @@
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="75dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/nature"
+        android:src="@drawable/champ"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFFFFF"
         />
@@ -33,8 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/my_email"
-        android:layout_marginTop="99dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="139dp"
+        android:layout_marginLeft="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp"
         android:textColorLink="@color/color_tab"
